# AI-Research-Paper-Summarizer

./: .gitignore  README.md  pyproject.toml
src/ai_research_paper_summarizer/: cli.py  config.py  models.py  prompts.py  scraper.py  summarizer.py  utils.py
