[project]
name = "ai-research-paper-summarizer"
version = "0.1.0"
description = "Summarize recent AI research papers from arXiv using Ollama."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.53.0",
    "openai>=1.95.0",
    "ipywidgets>=8.1.7",
    "ipython>=9.4.0",
]

[project.scripts]
paper-summarizer = "ai_research_paper_summarizer.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"